[tool.poetry]
name = "cta"
version = "0.0.2"
description = "Chicago Transit Authority (CTA) REST API bindings"
license = "GNU Affero"
authors = ["Nicholas M. Synovic <nicholas.synovic@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/NicholasSynovic/tool_cta-python-api"
repository = "https://github.com/NicholasSynovic/tool_cta-python-api"
keywords = ["bindings", "cta", "api"]
classifiers = ["Development Status :: 1 - Planning"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
pandas = "^2.2.3"
jsonschema = "^4.23.0"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
